--- a/images.qrc
+++ b/images.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>Images/Splashscreen.png</file>
+        <file>Images/Sun.svg</file>
+        <file>Images/Rain.svg</file>
+        <file>Images/Cloud.svg</file>
+        <file>Images/Compass.png</file>
+        <file>Images/Arrow.svg</file>
     </qresource>
 </RCC>
